# st-utils

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: .gitignore  README.md  application-configs.yml  docker-compose.app-debug.yml  docker-compose.app-public.yml  docker-compose.app.yml  docker-compose.auth.yml  docker-compose.base.yml  docker-compose.persistent.yml  docker-compose.yml  init-auth-db.sh  init-auth-frost.sh  init-db.sh  init-frost.sh  init-webapp-auth.sh  start-debug-production.sh  start-production.sh  stop-production.sh
deploy/mosquitto/: init-mosquitto.sh  mosquitto.conf
deploy/secrets/: README.md
deploy/sensor_configs/: template.yaml
deploy/webapp-config/: web.xml
docs/: sensor-config-templates.md
docs/tapes/: application-setup.tape  config-setup.tape  credentials-input.tape  manage.tape  start.tape
mosquitto/: init-mosquitto.sh
scripts/: docker-compose.yml  download_csv_data.py  init-db.sh  linux-install.sh
sensor_configs/: 70:ee:50:7f:9d:32.yaml  70:ee:50:7f:a4:76.yaml  70:ee:50:7f:a8:b4.yaml  template.yaml
sensor_configs/milesight/: 24E124707D378803.yaml  24E124707E422031.yaml  24E124707E427251.yaml  24E124707E427315.yaml  24E124707E427316.yaml  24E124707E427318.yaml  24E124707E427324.yaml  24E124707E428497.yaml  24E124707E428510.yaml  24E124707E428606.yaml  24E124725E426631.yaml  24E124725F030015.yaml  24E124725F036927.yaml  24E124725F064050.yaml  24E124725F067901.yaml  24E124725F067924.yaml  24E124725F067994.yaml  24E124725F068020.yaml  (+2 more)
tests/: test_config.py
web/: app.js  index.html
(+102 files in other folders)
